# WERP_projecting_SFIs

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
.github/workflows/: main.yml  rename_project.yml
notebooks/: VicWaCI_plots.ipynb  blackwater_demonstration_figures.ipynb  blackwater_figures.ipynb  blackwater_testing.ipynb  camels.ipynb  data_exploration.ipynb  experiment_with_median.ipynb  generate_velocity_tables.ipynb  get_rating_tables.ipynb  paper_notebook_predict_2012-2024.ipynb  paper_notebook_verif_plotting_v1.ipynb  test_notebook copy.ipynb  test_notebook.ipynb  test_notebook_multivariate.ipynb
tests/: test_base.py
tests/data/: _MURR_B0D000__eFA_annual_stats_10discount.txt
werp_projecting_sfis/: __main__.py  base.py  cli.py  file_io.py  get_rating_tables_and_cross_sections.py  model_fitting.py
