[tool.poetry]
name = "werp_projecting_sfis"
version = "0.1.0"
description = ""
authors = ["David Robertson <david.robertson@csiro.au", "Andrew Freebairn <andrew.freebairn@csiro.au>"]
readme = "README.md"
packages = [{include = "werp_projection_sfis"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
xarray = "^2024.1.1"
nc-time-axis = "^1.4.1"
argparse = "^1.4.0"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
ipykernel = "^6.29.2"
netcdf4 = "^1.6.5"
dask = "^2024.2.0"
jinja2 = "^3.1.3"
h5netcdf = "^1.3.0"
python-rle = "^0.0.3"
pymc = "^5.16.2"
pytest-github-actions-annotate-failures = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
